mychart/templates/dep2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mohamedtarekguezguez
  name: simple-webapp-color
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-webapp-color
  template:
    metadata:
      labels:
        app: simple-webapp-color
    spec:
      containers:
        - name: simple-webapp-color
          image: ghcr.io/horizon-school-of-digital-technologies/simple-webapp-color:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-data
              mountPath: "/tmp/data"
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: app-data-pvc
