mychart/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mohamedtarekguezguez
  name: simple-webapp-color-svc
spec:
  selector:
    app: simple-webapp-color
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
